name:                Quies
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Quies#readme
license:             MIT
license-file:        LICENSE
author:              Bartek Banachewicz
maintainer:          bananu7@o2.pl
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Quies.Parser, Quies.AST, Quies.Codegen
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       megaparsec,
                       parser-combinators,
                       text,
                       llvm-hs-pure,
                       llvm-hs-pretty

executable quiesc
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Quies
                     , text
                     , megaparsec
                     , parser-combinators
                     , llvm-hs-pure
                     , llvm-hs-pretty

  default-language:    Haskell2010

test-suite Quies-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Quies
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Quies
